# robot

fpga/: .gitignore  build.sbt
fpga/quartus/: DE10NANOrsyocto.qsf  DE10NANOrsyocto.restore.rpt  DE10NANOrsyocto.v  Makefile  adc_ltc2308_hw.tcl  base_hps.qsys  base_hps.sopcinfo  qar_info.json  robot.qpf  robot.qsf
fpga/quartus/base_hps/: base_hps.bsf  base_hps.cmp  base_hps.html  base_hps.xml  base_hps_bb.v  base_hps_generation.rpt  base_hps_generation_previous.rpt  base_hps_inst.v  base_hps_inst.vhd
fpga/quartus/base_hps/synthesis/: base_hps.debuginfo  base_hps.qip  base_hps.v
fpga/quartus/header/: hps_0.h
fpga/quartus/hps_isw_handoff/base_hps_hps_0/: id
fpga/quartus/modules/: top_level.v
hps/: CMakeLists.txt  Makefile
hps/include/: RF24  hps_0.h  hps_base.h
hps/include/robot/: console.hpp  motor.hpp  printing.hpp  radio.hpp  robot.hpp  sonar.hpp
hps/src/: motor.c
hps/src/motor/: Makefile
hps/src/pingpair_dyn/: Makefile  pingpair_dyn  pingpair_dyn.cpp
hps/src/robot/: motor.cpp  radio.cpp  robot.cpp  sonar.cpp
hps/src/terminal/terminal/: terminal.ino
hps/srcbak/: sonar.c
notes/: components
quartus/: DE10NANOrsyocto.qsf  DE10NANOrsyocto.qws  DE10NANOrsyocto.v
quartus/base_hps/: base_hps.bsf  base_hps.cmp  base_hps.html  base_hps.xml  base_hps_bb.v  base_hps_generation.rpt  base_hps_generation_previous.rpt  base_hps_inst.v  base_hps_inst.vhd
quartus/base_hps/synthesis/: base_hps.debuginfo  base_hps.qip  base_hps.v
quartus/devicetree/: Makefile  socfpga_cy5.dtb  socfpga_cy5.dts
quartus/header/: hps_0.h
(+61 files in other folders)
